@startuml statediagramm
header Line-Follower software \n for Pololu Zumo32U4
footer DieFantastischenVier

title State Diagram


[*]-->SystemStart : [Inital]

SystemStart-->Calibration : [timer = 2 s]


SystemStart : On Entry \ Start timer \n and show team name\n On Exit \Stop timer

Wait-->Calibration : [pushbutton C]

Wait-->ModeSwitch : [pushbutton B]

ModeSwitch : Display current parameter stats


ModeSwitch-->Error : [Loading parameters failed]

ModeSwitch-->Wait : [changed parameters]


Calibration-->Wait : [Calibration done]

Calibration-->Error : [Calibration failed]

Wait--> StartRace : [pushbutton A]


StartRace--> RunRace : [Startline detected]

StartRace--> Error : [Startline timer > 2 s]

RunRace-->RaceDone : [Endline detected]

RunRace-->RedetectTrack : [track lost]

RedetectTrack-->Error : [timer > 5 s]

RedetectTrack : On Entry / Start timer \n do / search track \n On Exit / Stop timer

RedetectTrack-->RunRace : [track redeteckted]

RunRace-->Error :[timer for racetime > 20 s]

StartRace : On Entry / wait 3 s \n do / start driving \n do / start Startline timer\n On exit / Stop Starline timer

RunRace : On Entry / Start timer for racetime if not already done \n + notify user with buzzer if not already done once \n do / follow track

Error : On Entry / Stop all movements \n +  notify user with alarm tone \n do / display Error reason

RaceDone : On Entry / Stop timer for racetime \n + Stop all movements \n + Notify unser with notification sound \n do / display value of timer for racetime 


@enduml
